# SCIPJack-Steiner-tree-solver

./: CMakeLists.txt  README.md
scip/: CMakeLists.txt
src/: cmain.c  grphbase.c  grphload.c  probdata_stp.c  reader_stp.h  reduce.c
